Fixing keynotes on mobile

--- a/assets/_sass/_keynotelist.scss
+++ b/assets/_sass/_keynotelist.scss
@@ -24,15 +24,15 @@ section.keynotes-front {
 		}
 
 		> li {
-			max-width: 50%;
-			width: 300px;
+			max-width: 33%;
+			width: 33%;
 			text-align: center;
 			padding-bottom: 1em;
 
 			div {
 				margin: 0 auto;
-				width: 250px;
-				height: 250px;
+				width: 200px;
+				height: 200px;
 				border-radius: 50%;
 				background-color: #eee;
 				background-position: center center;
@@ -62,7 +62,33 @@ div.keynote-full {
 		background-size: cover;
 		margin-left: -220px;
 	}
-
 }
 
+@media (max-width: 700px) {
+	section.keynotes-front {
+		ul {
+			> li {
+				div {
+					width: 150px;
+					height: 150px
+				}
+			}
+		}
+	}
+}
+
+
+@media (max-width: 500px) {
+	section.keynotes-front {
+		ul {
+			flex-direction: column;
+			justify-content: center;
+	
+			> li {
+				width: 100%; max-width: 100%;
+			}
+
+		}
+	}
+}
 
